--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -929,18 +929,18 @@ footer .links-column ul {
   /*Home - 1: Слайдер*/
   .home_slider {
     max-width: 1200px;
-    padding: 30px 10px;
+    padding: 30px 0px !important;
     margin: 0 auto;
     position: relative;
   }
 
   .home_slider .swiper-wrapper {
-    border-radius: 10px;
+    border-radius: 0px;
   }
 
   .home_slider .swiper-slide {
-    height: 240px;
-    border-radius: 10px;
+    height: 196px;
+    border-radius: 0px;
   }
 
   .home_slider .swiper-slide span {
