--- a/src/app/header.css
+++ b/src/app/header.css
@@ -463,3 +463,27 @@ header .delivery_block b {
     font-size: 16px;
     cursor: pointer;
 }
+
+.cat_like_items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin-bottom: 40px;
+}
+
+.cat_like_single {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    font-size: 15px;
+    gap: 10px;
+    line-height: 17px;
+    padding: 10px;
+    border-radius: 50px;
+    background-color: #f5f5f5;
+    justify-content: flex-end;
+}
+
+.cat_like_single img {
+    width: 30px;
+}
