--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -259,30 +259,71 @@ legend {
   color: #fff;
 }
 
+
+/* .cart_flex_block .quantity-button.dis_increment:after {
+  content: 'Достигнуто максимальное кол-во';
+  display: inline-block;
+  font-size: 12px;
+  line-height: 12px;
+  position: absolute;
+  top: -35px;
+  left: unset;
+  width: fit-content;
+  white-space: nowrap;
+  color: #e00303;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #ff00002b;
+  opacity: 0;
+  animation: fadeIn 0.5s forwards;
+} */
+
+/* Анимация для изменения opacity */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 /* Стили для overlay popup */
 .actb_popup_overlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  /* top: 0;
+  left: 0; */
+  right: 20px;
+  bottom: 20px;
+  /* background: rgba(0, 0, 0, 0.5); */
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+  justify-content: flex-end;
   align-items: center;
   z-index: 1000;
+  animation: fadeIn 0.5s forwards;
 }
 
 /* Стили для содержимого popup */
 .actb_popup_content {
   background: #fff;
-  padding: 20px 30px;
+  padding: 30px 30px;
   border-radius: 8px;
   position: relative;
-  max-width: 400px;
+  max-width: 500px;
   width: 90%;
   text-align: center;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.added_to_cart_pop {
+  display: flex;
+  gap: 10px;
+}
+
+.pop_prod_inf {
+  text-align: left;
 }
 
 /* Стили для кнопки закрытия */
@@ -292,43 +333,44 @@ legend {
   right: 15px;
   background: none;
   border: none;
-  font-size: 24px;
+  font-size: 25px;
+  font-weight: 500;
   cursor: pointer;
 }
 
 /* Стили для изображения товара в popup */
 .actb_popup_product_image {
-  width: 100px;
-  height: 100px;
+  width: 130px;
   object-fit: contain;
-  margin-bottom: 15px;
 }
 
 /* Стили для заголовка */
 .actb_popup_title {
-  margin-bottom: 10px;
-  font-size: 20px;
-  color: #333;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 15px;
+  color: #000;
+  margin-bottom: 17px;
 }
 
 /* Стили для названия товара */
-.actb_popup_product_name {
-  margin-bottom: 5px;
-  font-size: 18px;
-  color: #555;
+.actb_popup_product_name,
+.actb_popup_quantity {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 15.5px;
+  color: #000;
+  margin-bottom: 20px;
 }
 
-/* Стили для количества */
-.actb_popup_quantity {
-  margin-bottom: 15px;
-  font-size: 16px;
-  color: #555;
+.actb_popup_quantity .actb_popup_quantity_str {
+  font-weight: 500;
 }
 
 /* Стили для кнопки перехода к корзине */
 .actb_popup_button {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 5px 13px;
   background-color: #64b704;
   color: #fff;
   border-radius: 4px;
@@ -338,6 +380,20 @@ legend {
 
 .actb_popup_button:hover {
   background-color: #57a503;
+}
+
+@media only screen and (max-width: 768px) {
+  .actb_popup_content {
+    padding: 20px;
+  }
+
+  .actb_popup_product_image {
+    display: none;
+  }
+
+  .actb_close_button {
+    top: 7px;
+  }
 }
 
 
