--- a/src/app/cart/cart.css
+++ b/src/app/cart/cart.css
@@ -7,6 +7,10 @@
     text-align: center;
 }
 
+.cart_wrapper.empty {
+    margin-bottom: 100px;
+}
+
 .cart_wrapper .empty_cart_image {
     max-width: 366px;
     margin: 0 auto;
@@ -46,52 +50,6 @@
     gap: 15px;
 }
 
-@media only screen and (max-width: 768px) {
-    .cart_wrapper {
-        padding: 0 60px;
-    }
-
-    .cart_wrapper .empty_cart_image {
-        max-width: 250px;
-        margin-bottom: 20px;
-    }
-
-    .cart_wrapper .cart-title h1 {
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 22px;
-        margin-bottom: 15px;
-    }
-
-    .cart_wrapper .cart_epmty_info {
-        font-size: 15px;
-        line-height: 17px;
-        padding: 0 20px;
-    }
-
-
-    .cart_flex_block {
-        flex-direction: column;
-        gap: 20px;
-        margin-bottom: 40px;
-    }
-
-    .cart_flex_block .items,
-    .cart_flex_block .summary {
-        width: 100% !important;
-    }
-
-    .cart_wrapper .info_block_main {
-        flex-direction: column;
-        display: flex;
-        align-items: flex-start;
-        gap: 10px;
-    }
-
-    .cart_wrapper .info_block_main .cart_product_name {
-        margin: 0px;
-    }
-}
 
 
 
@@ -394,4 +352,123 @@ h3.cart_brand_name {
     color: #858585;
     text-align: center;
     padding: 0 40px;
+}
+
+.terms a {
+    text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 768px) {
+    .cart_wrapper {
+        padding: 0 60px;
+    }
+
+    .cart_wrapper .empty_cart_image {
+        max-width: 250px;
+        margin-bottom: 20px;
+    }
+
+    .cart_wrapper .cart-title h1 {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 22px;
+        margin-bottom: 15px;
+    }
+
+    .cart_wrapper .cart_epmty_info {
+        font-size: 15px;
+        line-height: 17px;
+        padding: 0 20px;
+    }
+
+
+    .cart_flex_block {
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 40px;
+    }
+
+    .cart_flex_block .items,
+    .cart_flex_block .summary {
+        width: 100% !important;
+    }
+
+    .cart_wrapper .info_block_main {
+        flex-direction: column;
+        display: flex;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    .cart_wrapper .info_block_main .cart_product_name {
+        margin: 0px;
+    }
+
+    .cart_wrapper .terms {
+        padding: 0;
+    }
+
+    .cart_fill_info .summary_price {
+        font-size: 25px;
+        line-height: 25px;
+    }
+
+    .cart_checkout-button {
+        margin-top: 15px;
+    }
+}
+
+
+
+/* components/CartSummaryUpdate.css */
+
+/* Определяем переходы для целевых элементов */
+.cart_sum_tot_price,
+:not(.checkout_section) .summary_green .cart_summary_items_count_price {
+    transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+/* Определяем состояние при добавлении класса animate */
+.summary_green.animate .cart_sum_tot_price,
+:not(.checkout_section) .summary_green.animate .cart_summary_items_count_price {
+    transform: scale(1.05);
+    /* Увеличение размера */
+    filter: blur(4px);
+    /* Размытие */
+    opacity: 0.7;
+    /* Изменение прозрачности */
+}
+
+
+/* components/CartSummaryUpdate.css */
+
+/* Определяем переходы для целевых элементов */
+.cart_sum_tot_price,
+.summary_green .cart_summary_items_delivery_price {
+    transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+/* Определяем состояние при добавлении класса animate */
+.checkout_section .summary_green.animate .cart_sum_tot_price,
+.checkout_section .summary_green.animate .cart_summary_items_delivery_price {
+    transform: scale(1.05);
+    /* Увеличение размера */
+    filter: blur(4px);
+    /* Размытие */
+    opacity: 0.7;
+    /* Изменение прозрачности */
 }
