--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -291,6 +291,8 @@ legend {
 
 /* Стили для overlay popup */
 .actb_popup_overlay {
+  width: 100%;
+  height: 100%;
   position: fixed;
   /* top: 0;
   left: 0; */
@@ -300,7 +302,7 @@ legend {
   display: flex;
   /* justify-content: center; */
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-end;
   z-index: 1000;
   animation: fadeIn 0.5s forwards;
 }
@@ -396,7 +398,28 @@ legend {
   }
 }
 
+/*Fade out для мини карты*/
+.actb_popup_overlay {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
 
+.actb_popup_overlay.fade-out {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.actb_popup_content {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  transform: scale(1);
+}
+
+.actb_popup_content.fade-out {
+  opacity: 0;
+  transform: scale(0.95);
+}
 
 
 
