Минорная Сборка v 0.7 (Чекаут и рабочий карт)

--- a/src/app/checkout/checkout.css
+++ b/src/app/checkout/checkout.css
@@ -272,3 +272,7 @@ span#phone-error {
         right: 10px;
     }
 }
+
+.checkout_section.cart_wrapper .info_block_main {
+    align-items: flex-start;
+}
