--- a/src/app/product/[slug]/product.css
+++ b/src/app/product/[slug]/product.css
@@ -652,8 +652,49 @@ button:hover {
     min-height: 38px;
 }
 
+/*Блок товар не найден*/
+.product-not-found {
+    max-width: 1220px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+    margin-top: 60px;
+    border-radius: 30px;
 
+    text-align: center;
+}
 
+.product-not-found h1 {
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 30px;
+    margin-bottom: 40px;
+}
+
+.product-not-found a.catalog-link {
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
+    width: fit-content;
+    padding: 6px 15px;
+    color: #fff;
+    border-radius: 10px;
+    background: #ff7900;
+    transition: transform 0.3s;
+}
+
+.product-not-found a.catalog-link:hover {
+    transform: scale(1.05);
+}
+
+.product-not-found .home_brand_list {
+    margin-top: 30px;
+}
+
+.product-not-found .home_categories_section_heading {
+    display: none;
+}
 
 
 
@@ -776,6 +817,18 @@ button:hover {
 
     .woo_prod_single_template {
         margin-bottom: 0px;
+    }
+
+
+    /*Блок товар не найден*/
+    .product-not-found h1 {
+        font-size: 25px;
+        line-height: 25px;
+        margin-bottom: 20px;
+    }
+
+    .product-not-found .home_brand_list {
+        padding: 0px;
     }
 }
 
