Предрелизная сборка v 0.9.1 (Добавил поддержку категорий)

--- a/src/app/brand_list/brand_list.css
+++ b/src/app/brand_list/brand_list.css
@@ -33,6 +33,12 @@
     margin-top: 40px;
 }
 
+.brand-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media only screen and (max-width: 768px) {
     .page_brand_list {
         margin-top: 20px;
