--- a/src/app/shop/shop.css
+++ b/src/app/shop/shop.css
@@ -24,7 +24,7 @@ h1.shop_page_title {
     font-size: 30px;
     font-weight: 500;
     line-height: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 
@@ -36,7 +36,7 @@ h1.shop_page_title {
 
 .shop_page_prod_grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 20px;
 }
 
@@ -79,12 +79,6 @@ h1.shop_page_title {
 
 
 /* catalog.css */
-.shop_page_prod_grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 2rem;
-    padding: 2rem 0;
-}
 
 .product_item {
     opacity: 0;
@@ -136,7 +130,6 @@ h1.shop_page_title {
 
 .pagination_button {
     padding: 0.5rem 1rem;
-    border: 1px solid #ddd;
     border-radius: 4px;
     text-decoration: none;
     transition: all 0.3s ease;
@@ -144,6 +137,7 @@ h1.shop_page_title {
 
 .pagination_button:hover {
     background-color: #f5f5f5;
+    transform: scale(1.1);
 }
 
 .pagination_info {
@@ -151,11 +145,50 @@ h1.shop_page_title {
     color: #666;
 }
 
+a.pagination_number {
+    display: flex;
+    width: 32px;
+    height: 32px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
 
+a.pagination_number:hover {
+    background-color: #f2f2f280;
+}
+
+a.pagination_number.active {
+    background-color: #EBFFA380;
+    font-weight: 400;
+    border: 1px solid gray;
+}
+
+.pagination_numbers {
+    display: flex;
+    gap: 8px;
+}
+
+span.stock_count {
+    display: block;
+    margin-bottom: 10px;
+    margin-top: -10px;
+    padding: 2px 6px;
+    background: #f5f5f5;
+    font-size: 14px;
+    width: fit-content;
+    border-radius: 5px;
+}
 
 @media only screen and (max-width: 768px) {
+    .shop_page {
+        margin-top: 20px;
+    }
+
     .shop_page_prod_grid {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
     .shop_page {
@@ -168,5 +201,13 @@ h1.shop_page_title {
 
     .product_item .product_meta_box a.product_item__name {
         font-size: 13px;
+    }
+
+    a.pagination_button svg {
+        min-width: 20px;
+    }
+
+    span.stock_count {
+        margin-top: -5px;
     }
 }
