Предрелизная сборка v 0.9.24 (Каталог на REST API, добавил пагинацию)

--- a/src/app/shop/shop.css
+++ b/src/app/shop/shop.css
@@ -203,6 +203,10 @@ span.stock_count {
         font-size: 13px;
     }
 
+    .pagination_button {
+        padding: 10px;
+    }
+
     a.pagination_button svg {
         min-width: 20px;
     }
