--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -540,6 +540,40 @@ legend {
 }
 
 @media only screen and (min-width: 768px) {
+  .floating_cart {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    height: 46px;
+    width: 46px;
+    border-radius: 50%;
+    background: #ff7900;
+    border: 1px solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+    cursor: pointer;
+    z-index: 999;
+    box-shadow: 0px 4px 19px 0px rgb(194 194 194);
+  }
+
+  .floating_cart:hover {
+    transform: scale(1.1);
+  }
+
+  .floating_cart .absolute_count_c {
+    top: -8px;
+    left: unset;
+    right: 0px;
+    border: 1px solid #fff;
+  }
+
+  .floating_cart svg {
+    width: 56%;
+    padding-right: 2px;
+  }
+
   .home_brand_list .swiper-slide {
     min-height: 134px;
   }
@@ -1177,6 +1211,10 @@ footer .links-column ul {
 }
 
 @media only screen and (max-width: 768px) {
+  .floating_cart {
+    display: none;
+  }
+
   .pc_visible {
     display: none !important;
   }
