--- a/src/app/product/[slug]/product.css
+++ b/src/app/product/[slug]/product.css
@@ -2,7 +2,8 @@
 /*Отдельный продукт*/
 
 .woo_prod_single_template {
-    max-width: 1180px;
+    max-width: 1220px;
+    padding: 0 20px;
     margin: 0 auto;
     margin-bottom: 60px;
     margin-top: 20px;
