--- a/src/app/checkout/checkout.css
+++ b/src/app/checkout/checkout.css
@@ -1,3 +1,8 @@
+.checkout_section :global(.consultation) {
+    /* ваши стили для футера */
+    display: none;
+}
+
 .checkout_section.cart_wrapper {
     display: flex;
     align-items: flex-start;
