--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -864,7 +864,9 @@ section.home_product_section {
 
   padding: 0px;
 
-  background-image: url(https://nuxt.vitaline.uz/wp-content/uploads/2024/12/76890fda4fc57fb382868edf06d666c7.jpg);
+  /* background-image: url(https://nuxt.vitaline.uz/wp-content/uploads/2024/12/76890fda4fc57fb382868edf06d666c7.jpg); */
+  background-image: url(https://nuxt.vitaline.uz/wp-content/uploads/2025/01/consultation_bcg.webp);
+
   background-size: cover;
   background-position: center;
 }
@@ -996,8 +998,7 @@ section.home_product_section {
 .grid_adv_item span::before {
   content: '';
   display: inline-block;
-  /* background-image: url(https://nuxt.vitaline.uz/wp-content/uploads/2024/12/3643781-check-checklist-complete-done-mark_113406-1-1.png); */
-  background-image: url(https://nuxt.vitaline.uz/wp-content/uploads/2025/01/consultation_bcg.webp);
+  background-image: url(https://nuxt.vitaline.uz/wp-content/uploads/2024/12/3643781-check-checklist-complete-done-mark_113406-1-1.png);
   background-size: contain;
   width: 27px;
   height: 27px;
@@ -1637,7 +1638,7 @@ header .images_block img {
 
 @media only screen and (max-width: 768px) {
   .loading-container {
-    height: calc(100vh - 180px);
+    height: calc(100vh - 130px);
   }
 }
 
