Предрелизная сборка v 0.9.9 (Наладил чекаут, добавил обратку ошибок, добавил попап загрузик)

--- a/src/app/checkout/checkout.css
+++ b/src/app/checkout/checkout.css
@@ -281,3 +281,93 @@ span#phone-error {
 .checkout_section.cart_wrapper .info_block_main {
     align-items: flex-start;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Добавьте эти стили в ваш CSS файл */
+.fadeIn {
+    animation: fadeIn 0.3s ease-in-out forwards;
+}
+
+.fadeOut {
+    animation: fadeOut 0.3s ease-in-out forwards;
+}
+
+.content-transition {
+    animation: blurToClear 0.4s ease-out forwards;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes blurToClear {
+    0% {
+        filter: blur(8px);
+        opacity: 0;
+        transform: scale(0.95);
+    }
+
+    100% {
+        filter: blur(0);
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.dot-1,
+.dot-2,
+.dot-3 {
+    opacity: 0;
+    animation: showDot 1.5s infinite;
+}
+
+.dot-2 {
+    animation-delay: 0.5s;
+}
+
+.dot-3 {
+    animation-delay: 1s;
+}
+
+@keyframes showDot {
+
+    0%,
+    100% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+}
