--- a/src/app/checkout/success/thanks.css
+++ b/src/app/checkout/success/thanks.css
@@ -194,3 +194,15 @@ p.first_info::before,
         width: 100%;
     }
 }
+
+
+.back-home-link {
+    display: inline-block;
+    font-weight: 500;
+    color: #FFF;
+    background-color: #ff7900;
+    border-radius: 10px;
+    margin-top: 30px;
+    width: fit-content;
+    padding: 8px 15px;
+}
